--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "css-loader": "^4.2.2",
     "file-loader": "^6.0.0",
+    "particles.js": "^2.0.0",
     "style-loader": "^1.2.1"
   }
 }
