--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "css-loader": "^4.2.2",
+    "emailjs-com": "^2.6.3",
     "file-loader": "^6.0.0",
     "particles.js": "^2.0.0",
     "style-loader": "^1.2.1",
