Input div & error message

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -106,7 +106,8 @@
 		"no-shadow": "warn",
 		"spaced-comment": "off",
 		"no-plusplus": "off",
-		"no-new": "off"
+		"no-new": "off",
+		"no-useless-return": "warn"
 	},
 
 	"plugins": [
