--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "css-loader": "^4.2.2",
     "emailjs-com": "^2.6.3",
     "file-loader": "^6.0.0",
